feat: add users and session management
