# app/schemas/users.py
@@ -1,0 +1,6 @@
+from pydantic import BaseModel
+
+
+class UserForm(BaseModel):
+    username: str
+    password: str
